# handsim

./: CMakeLists.txt  README.md
cmake/: SearchForStuff.cmake  TestUtils.cmake  Utils.cmake  config.hh.in  setup.sh.in
doc/: Makefile  optitrack.tex  referenceguide.tex  referenceguide.tex.bak
examples/: CMakeLists.txt  optitrackBridge.cc  polhemus_example.c  polhemus_example_continuous.c  polhemus_example_multiple_sensors.c
haptix_gazebo_plugins/: CMakeLists.txt  package.xml
haptix_gazebo_plugins/cmake/: setup.sh.in
haptix_gazebo_plugins/config/: HaptixGUIPlugin.sdf
haptix_gazebo_plugins/config/arat_icons/: CMakeLists.txt
haptix_gazebo_plugins/include/haptix_gazebo_plugins/: HaptixControlPlugin.hh  HaptixGUIPlugin.hh  TaskButton.hh
haptix_gazebo_plugins/scripts/: handsim_apl
haptix_gazebo_plugins/src/: HaptixControlPlugin.cc  HaptixGUIPlugin.cc  TaskButton.cc
haptix_gazebo_plugins/worlds/: arat.world  arat_objects.world  arat_test.world
images/: CMakeLists.txt
include/: CMakeLists.txt
include/handsim/: CMakeLists.txt  HaptixControlPlugin.hh  HaptixGUIPlugin.hh  HaptixWorldPlugin.hh  JointHelper.hh  MotorInfo.hh  Optitrack.hh  OptitrackBridge.hh  TactorsPlugin.hh  TaskButton.hh  WrenchHelper.hh  polhemus_driver.h
models/: CMakeLists.txt
models/mpl_haptix_arm/: model.config  model.sdf
models/mpl_haptix_left_forearm/: model.config  model.sdf
models/mpl_haptix_left_forearm/meshes/: forearm.stl  index0.stl  index1.stl  index2.stl  index3.stl  middle0.stl  middle1.stl  middle2.stl  middle3.stl  palm.stl  pinky0.stl  pinky1.stl  pinky2.stl  pinky3.stl  ring0.stl  ring1.stl  ring2.stl  ring3.stl  thumb0.stl  thumb1.stl  thumb2.stl  thumb3.stl  wristx.stl  wristy.stl  wristz.stl
models/mpl_haptix_right_forearm/: model.config  model.sdf
models/spring_buckle_test/: model.config  model.sdf
models/spring_buckle_test_1/: model.config  model.sdf
models/spring_buckle_test_2/: model.config  model.sdf
models/spring_buckle_test_3/: model.config  model.sdf
polhemus_calibration/: mean_pair.py  plot.py
polhemus_calibration/data_08_08_2014/: a_wc_bc.data  long_range.data  long_range_plugged_unplugged.data
polhemus_driver/: CMakeLists.txt  package.xml
polhemus_driver/cmake/: polhemus_driver-config.cmake.in
polhemus_driver/src/: polhemus_driver.c
scripts/: haptixUpdate.sh  haptixXorg.sh  haptix_gazebo_install.sh  haptix_installation.sh  haptix_sdk_install.sh  start_haptix.sh  virtualOSRF.sh
sr_description/: CMakeLists.txt  model.config  package.xml  sr_description.sdf  sr_description.urdf
sr_description/hand/xacro/palm/: palm.urdf.xacro
sr_description/robots/: arm_and_hand_motor.urdf.xacro  forearm_and_hand_motor.urdf.xacro  handsupport_and_hand_motor.urdf.xacro
src/: CMakeLists.txt  HaptixControlPlugin.cc  HaptixGUIPlugin.cc  HaptixWorldPlugin.cc  JointHelper.cc  Optitrack.cc  OptitrackBridge.cc  OptitrackBridge_TEST.cc  TactorsPlugin.cc  TaskButton.cc  WrenchHelper.cc  polhemus_driver.c
test/: CMakeLists.txt  ServerFixture.hh  test_config.h.in
test/integration/: CMakeLists.txt  hand_grasping.cc  physics.cc  sim_api.cc  sim_api_client.cc  sim_api_mex_client.cc
test/performance/: CMakeLists.txt
test/regression/: 86_motor_values.cc  CMakeLists.txt
test/worlds/: arat_test.world
tools/polhemus_calibration/data_08_08_2014/: a_wc_bc_2.data
windows/: CMakeLists.txt  README.md  configure.bat  optitrackBridge.cc
worlds/: CMakeLists.txt  arat.world  arat_both.world  arat_left.world  arat_no_optitrack.world  arat_oculus.world  cups.rworld  custom_haptix.world  demo.rworld  demo.world  handsim_empty.world  hanoi.rworld  hanoi.world  hanoi1.rworld  hanoi1.world  hanoi_bitmask.rworld  hanoi_bitmask.world  hanoi_cylinder.rworld  hanoi_cylinder.world  hanoi_handle.rworld  hanoi_handle.world  hanoi_stable.rworld  hanoi_stable.world  haptix_template.world  hidden_treasure.rworld  hidden_treasure.world  luke_hand.world  luke_hand_spring_test.world  luke_hands.world  luke_left_hand.world  primitive_hand.world  test_hanoi.rworld  test_hanoi.world  wood_stack.world
