<?xml version="1.0"?>
<package>
  <name>haptix_gazebo_plugins</name>
  <version>3.1.0</version>
  <description>The haptix_gazebo_plugins package</description>
  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://gazebosim.org/wiki/handsim</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
    <run_depend>gazebo</run_depend>
  <build_depend>polhemus_driver</build_depend>
    <run_depend>polhemus_driver</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
